i got hoes on hoes

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loading Screen</title>
+<title>Trinity OS</title>
+<!-- Metadata -->
+<meta name="description" content="Trinity OS | A unblocker enviroment that has apps/windows that go through a secure proxy.">
+<meta name="author" content="Glitch Network">
+<meta name="keywords" content="Trinity OS">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
