--- a/public/os.html
+++ b/public/os.html
@@ -210,6 +210,12 @@ body {
                      </div>
                  </div>
 
+                 <div id="start_menu_buttons" onclick="settings()" style="background-color: #434444;">
+                    <div>
+                         Settings
+                     </div>
+                 </div>
+
 
 
 
@@ -238,6 +244,35 @@ body {
     </div>
 
     <script>
+
+        document.addEventListener('DOMContentLoaded', function() {
+            setInterval(updateTheme, 1000);
+        });
+
+        function updateTheme() {
+    if (localStorage.getItem("theme") != null) {
+        var theme = localStorage.getItem("theme");
+        // Edit the body's background gradient based on the theme
+        if (theme == "light") {
+            document.body.style.background = "linear-gradient(to right, #b6fbff, #ffffff)"; // light blue to white
+        } else if (theme == "dark") {
+            document.body.style.background = "linear-gradient(to right, #333333, #1a1a2e)"; // dark grey to dark blue
+        } else if (theme == "red") {
+            document.body.style.background = "linear-gradient(to right, #000000, red)"; // black to dark grey
+        } else if (theme == "purple") {
+            document.body.style.background = "linear-gradient(to right, #8e44ad, #c154c1)"; // dark purple to light purple
+        } else if (theme == "blue") {
+            document.body.style.background = "linear-gradient(to right, #2c3e50, #4ca1af)"; // darker blue to lighter blue
+        }
+    }
+}
+
+
+        
+
+        function settings(){
+            createWindow("Settings", "<iframe src='./settings.html' style='height: 100%; width: 100%; border: none;'></iframe>");
+        }
 
         function xyz(){
             createWindow("Browser", "<iframe src='./browser' style='height: 100%; width: 100%; border: none;'></iframe>");
